# rust-plugin-system-draft

./: Cargo.toml  README.md
core-system/: Cargo.toml
core-system/src/: main.rs
first-plugin/: Cargo.toml
first-plugin/src/: lib.rs
second-plugin/: Cargo.toml
second-plugin/src/: lib.rs
