[workspace]

members = [
    "core-system",
    "first-plugin",
    "second-plugin",
]

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'unpacked'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"
