[package]
name = "second-plugin"
version = "0.1.0"
edition = "2021"

[lib]
# This is required so that the library is compiled as a shared library. See:
# * https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# * https://doc.rust-lang.org/reference/linkage.html
crate-type = ["dylib"]

[dependencies]
